--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-ui-router": "^0.2.15",
+    "babel-preset-es2015": "^6.6.0",
     "lodash": "^3.8.0",
     "normalize.css": "^3.0.3",
     "ts-loader": "^0.8.2"
@@ -13,6 +14,7 @@
   "devDependencies": {
     "angular-mocks": "^1.5.0",
     "awesome-typescript-loader": "^0.17.0",
+    "babel-cli": "^6.8.0",
     "babel-core": "^5.4.2",
     "babel-loader": "^5.0.0",
     "browser-sync": "^2.11.1",
@@ -41,6 +43,7 @@
     "style-loader": "^0.12.2",
     "stylus-loader": "^1.1.1",
     "supports-color": "^3.1.2",
+    "typescript": "^1.8.10",
     "webpack": "^1.9.5",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.6.0",
